@@ -13,7 +13,7 @@ name: Net-Songkick
 provides:
   Net::Songkick:
     file: lib/Net/Songkick.pm
-    version: 0.03
+    version: 0.04
   Net::Songkick::Artist:
     file: lib/Net/Songkick/Artist.pm
   Net::Songkick::Country:
@@ -40,4 +40,4 @@ requires:
   perl: v5.6.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.03
+version: 0.04
